# game-of-life

./: .gitignore  Cargo.toml  README.md  main.py  requirements.txt
src/: __main__.py  constants.py  lib.rs  py_interface.rs
