[package]
name = "game-of-life"
version = "0.1.0"
authors = ["SavagePastaMan <69145546+SavagePastaMan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "game_of_life"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.6"
features = ["extension-module"]
